# ESP32-Zenoh

./: CMakeLists.txt  readme.md  sdkconfig
components/zenoh-pico/: CMakeLists.txt
components/zenoh-pico/include/zenoh-pico/: config.h
components/zenoh-pico/include/zenoh-pico/system/platform/freertos/: lwip.h
components/zenoh-pico/src/system/freertos/: system.c
components/zenoh-pico/src/system/freertos/lwip/: network.c
main/: CMakeLists.txt  z_pub.c  z_sub.c
main/utils/: config.h  secret.h.template  wifi.c
python_scripts/: readme.md  subscriber_setup.md  zenoh_node.py  zenoh_pub.py  zenoh_sub.py
